--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": ",-----.,--.                  ,--. ,---.   ,--.,------.  ,------.     '  .--./|  | ,---. ,--.,--. ,-|  || o   \\  |  ||  .-.  \\ |  .---'     |  |    |  || .-. ||  ||  |' .-. |`..'  |  |  ||  |  \\  :|  `--,      '  '--'\\|  |' '-' ''  ''  '\\ `-' | .'  /   |  ||  '--'  /|  `---.      `-----'`--' `---'  `----'  `---'  `--'    `--'`-------' `------'     -----------------------------------------------------------------",
   "main": "server.js",
   "dependencies": {
+    "@linclark/pkg": "^1.0.2",
     "async": "^0.2.10",
     "express": "^3.2.6",
     "socket.io": "^0.9.17"
   },
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
+  "scripts": {  
+           "test": "node test.js"  
+         }, 
   "author": "",
   "license": "ISC"
 }
